# funclift-tutorials

./: README.md  hello.txt  pyproject.toml
doc/: note1.md
funclift_tutorials/: s2_io.py  s3_applicative.py  s4_option_monad.py  toy_examples.ipynb
funclift_tutorials/algebra/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py
funclift_tutorials/algebra/dual_space/: dual_spaces.py  int_example.py  z3_example.py  z3_space.py
funclift_tutorials/async_quesadilla/: demo_app.py
funclift_tutorials/comonad/: comonad.py  example.py  example2_1.py  example2_1_1.py  example2_2.py  example3.py  example4.py
funclift_tutorials/e1_functors/: s1_option.py  s2_option.py  s3_option.py  s4_option.py
funclift_tutorials/e2_applicatives/: s1_option.py  s2_option.py  s3_option.py
funclift_tutorials/e3_monads/: s2_option.py  s3_option.py
funclift_tutorials/file_read_write/: mock_interpreter.py
funclift_tutorials/functor_zoo/: example1.py
funclift_tutorials/lens/: README.md  example1_setter.py  example2_getter.py  example3_getter.py  example4_lens.py  example5_lens.py  example6_lens.py  forget.py  profunctor.py  yoneda.py
funclift_tutorials/representable/: example1.py  example2.py
funclift_tutorials/textfile/: demo_app.py  dsl.py  io_interpreter.py  io_interpreter2.py  io_interpreter3.py  mock_interpreter.py  old_school.py
funclift_tutorials/toy_examples/: s10_optiont.py  s1_pure.py  s5_no_option.py  s6_option.py  s7_io.py  s8_io.py  s9_writer.py
funclift_tutorials/traversable_examples/: example1.py  iter_example.py
